remove: unused user-related code as of now
add: users count in index page statistics

--- a/SupCooking-war/web/index.xhtml
+++ b/SupCooking-war/web/index.xhtml
@@ -86,7 +86,7 @@
                         <h2 class="center light-blue-text"><i class="material-icons">people</i></h2>
                         <h5 class="center">Contributors</h5>
                         
-                        <p class="light"><h:outputText value="#{recipeController.randomNumber}" style="font-weight:bold"/> gourmets share recipes with you.</p>
+                        <p class="light"><h:outputText value="#{userController.allusersCount}" style="font-weight:bold"/> gourmets share recipes with you.</p>
                     </div>
                 </div>
                 <div class="col s12 m6 l3">
