--- a/SupCooking-war/web/index.xhtml
+++ b/SupCooking-war/web/index.xhtml
@@ -49,7 +49,12 @@
                         <div class="card-image">
                             <img src="https://source.unsplash.com/256x256/?cook"></img>
                             <span class="card-title"><h:outputText value="#{recipe.title}" /></span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">restaurant</i></a>
+                            <h:form>
+                                <h:link outcome="recipe" styleClass="btn-floating halfway-fab waves-effect waves-light">
+                                    <f:param name="id" value="#{recipe.id}" />
+                                    <i class="material-icons">restaurant</i>
+                                </h:link>
+                            </h:form>
                         </div>
                         <div class="card-content">
                             <p><h:outputText value="#{recipe.description}" /></p>
